fix checkbox alignment

--- a/pages/settings/settings.css
+++ b/pages/settings/settings.css
@@ -140,7 +140,17 @@ button.disabled {
 /* end shared */
 
 .setting-section {
-	padding: 0.5em 0;
+	font-size: 0; /* avoid adding space between inline-block children */
+	padding: 0.5rem 0;
+}
+.setting-section input[type=checkbox] {
+	vertical-align: middle;
+}
+.setting-section input[type=checkbox] + label {
+	vertical-align: middle;
+}
+.setting-section input + label {
+	padding-left: 4px;
 }
 .setting-secondary-label {
 	padding-left: 1.1em;
